fix: styles update to improve contrast ratios across site

--- a/assets/style.css
+++ b/assets/style.css
@@ -64,7 +64,7 @@ p {
 }
 
 :root {
-  --primary-color: #009dc4;
+  --primary-color: #0d6efd;
 }
 
 .autoshow {
@@ -460,7 +460,7 @@ p {
 }
 
 .req {
-  color: red;
+  color: #a80000;
 }
 
 
